# http-server-c

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  appc  bigfile.txt  build.sh  index.html  main.c  run.sh  servertest.sh  test.sh  valgrindtest.sh
includes/: alloc.h  app.h  app_state.h  array.h  connection.h  errors.h  file_handler.h  http.h  http_header.h  http_path.h  http_query.h  http_req.h  http_resp.h  http_router.h  http_version.h  json.h  logging.h  result.h  tcp_stream.h  utils.h
resources/: 404.html  index.html  stylesheet.css
src/: alloc.c  alloc.h  app.c  app.h  app_state.c  app_state.h  array.h  connection.c  connection.h  errors.c  errors.h  file_handler.c  file_handler.h  http.c  http.h  http_req.c  http_req.h  http_resp.c  http_resp.h  http_router.c  http_router.h  json.c  json.h  logging.c  logging.h  result.h  strnstr.c  strnstr.h  tcp_stream.c  tcp_stream.h  test.c  test.h  unit_tests.c  utils.c  utils.h
src/alloc/: alloc.c  alloc_entries.c  alloc_entries.h  arena.c  arena.h  destructors.c  destructors.h  garbage_collector.c
src/helpers/: signal_helper.c  signal_helper.h
src/http/: http.c  http_header.c  http_parser.c  http_parser.h  http_path.c  http_query.c  http_req.c  http_resp.c  http_router.c  http_version.c
src/iouring/: async_consumer.c  async_consumer.h  async_engine.c  async_engine.h  async_producer.c  async_producer.h  common.h
tests/: CMakeLists.txt  alloc_test.c  json_test.c  test.h
